# test_os

./: Cargo.toml
kernel/: Cargo.toml
kernel/src/: acpi.rs  apic.rs  color.rs  frame_allocator.rs  framebuffer.rs  logger.rs  logging.rs  main.rs  memory.rs  pcie.rs  screen.rs  text_writer.rs
kernel/src/memory/: heap.rs  mod.rs
kernel/src/pci_express/: device.rs  device_capabilities.rs  mod.rs  registers.rs
src/: main.rs
